--- a/sass/components/page-header/_menu-button.scss
+++ b/sass/components/page-header/_menu-button.scss
@@ -17,6 +17,10 @@
   }
 }
 
+.menu-button.is-open {
+  position: fixed;
+}
+
 .menu-button__icon {
   transition: fill $transition-derault;
   &:active {
