--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ p {
   padding: 0;
 }
 
-body.modal-open {
+body.modal-open, body.menu-open {
   overflow: hidden;
 }
 
@@ -50,7 +50,7 @@ body.modal-open {
   justify-content: center;
 }
 
-.button-submit, .button__primary, .hero__title, .hero {
+.button-submit, .subscribe-form__input, .button__primary, .hero__title, .hero {
   margin-left: auto;
   margin-right: auto;
 }
@@ -221,6 +221,10 @@ body.modal-open {
   }
 }
 
+.menu-button.is-open {
+  position: fixed;
+}
+
 .menu-button__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -274,6 +278,8 @@ body.modal-open {
 
 @media screen and (max-width: 767px) {
   .contacts {
+    display: flex;
+    flex-direction: column-reverse;
     margin-top: 40%;
   }
 }
@@ -289,6 +295,24 @@ body.modal-open {
     display: flex;
     flex-direction: row;
     gap: 40px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__number {
+    font-size: 34px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.68px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts__mail {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.48px;
   }
 }
 
@@ -381,11 +405,14 @@ body.modal-open {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 480px;
+    height: 100vh;
     z-index: 1;
     display: none;
   }
   .menu-container.is-open {
+    position: fixed;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
   }
@@ -555,8 +582,6 @@ body.modal-open {
 
 .feauture-list {
   font-size: 14px;
-  font-weight: 400;
-  line-height: 1.7;
 }
 @media screen and (min-width: 768px) {
   .feauture-list {
@@ -582,20 +607,30 @@ body.modal-open {
 }
 @media screen and (min-width: 1200px) {
   .feauture-list__item {
-    width: calc((100% - 120px) / 4);
+    width: calc((100% - 90px) / 4);
   }
 }
 
 .feauture-box__subtitle {
-  text-align: center;
   margin-bottom: 10px;
+  text-align: center;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 768px) {
+  .feauture-box__subtitle {
+    text-align: left;
+  }
 }
 
 .feauture-box__text {
   margin: 0;
   font-weight: 400;
   font-size: 14px;
-  line-height: 1.17;
+  line-height: 1.7;
+  letter-spacing: 0.42px;
 }
 
 .feauture-box {
@@ -605,7 +640,7 @@ body.modal-open {
   margin-bottom: 30px;
 }
 
-.feature-box__icon {
+.feauture-box__icon {
   width: 70px;
   height: 70px;
 }
@@ -617,7 +652,6 @@ body.modal-open {
 @media screen and (min-width: 1200px) {
   .about-list {
     display: flex;
-    flex-wrap: wrap;
     gap: 30px;
   }
 }
@@ -905,10 +939,12 @@ body.modal-open {
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .subscribe-form {
+    display: flex;
+    flex-basis: 100%;
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
     margin-top: 60px;
-    display: flex;
-    flex-direction: column;
   }
 }
 
@@ -916,6 +952,7 @@ body.modal-open {
   margin-top: 0;
   margin-bottom: 20px;
   color: #ffffff;
+  letter-spacing: 0.42px;
   translate: border 2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -931,7 +968,7 @@ body.modal-open {
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 1199px) {
   .subscribe-form__input {
     width: 450px;
   }
@@ -976,7 +1013,7 @@ body.modal-open {
   fill: #ffffff;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .button-subscribe {
     margin-left: auto;
     margin-right: auto;
