--- a/sass/base/_body.scss
+++ b/sass/base/_body.scss
@@ -1,18 +1,18 @@
 body {
-    font-family: $font-primary;
-    background-color: $primary-white-color;
-    color: $primary-text-color;
-    margin: 0;
+  font-family: $font-primary;
+  background-color: $primary-white-color;
+  color: $primary-text-color;
+  margin: 0;
 
-    // @media (min-width: 800px) {
-    //         background-color: teal;
-    //     }
+  // @media (min-width: 800px) {
+  //         background-color: teal;
+  //     }
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 h1,
@@ -22,10 +22,10 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
-body.modal-open {
-    overflow: hidden;
+body.modal-open, body.menu-open {
+  overflow: hidden;
 }
