--- a/sass/components/footer/subscribe-form/_subscribe-form.scss
+++ b/sass/components/footer/subscribe-form/_subscribe-form.scss
@@ -1,61 +1,66 @@
 .subscribe-form {
+  @media screen and (min-width: $tablet) and (max-width: 1199px) {
+    display: flex;
+    flex-basis: 100%;
+    flex-direction: column;
+    justify-content: center;
 
-    @media screen and (min-width: $tablet) and (max-width: 1199px) {
-        text-align: center;
-        margin-top: 60px;
-        display: flex;
-        flex-direction: column;
-      }
+    text-align: center;
+    margin-top: 60px;
+  }
 }
 
 .subscribe-form__title {
-@extend %subtitle;
+  @extend %subtitle;
 
-    margin-top: 0;
-    margin-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 20px;
 
-    color: $primary-white-color;
-  
-    translate: border 2s cubic-bezier(0.4, 0, 0.2, 1);
+  color: $primary-white-color;
+
+  letter-spacing: 0.42px;
+
+  translate: border 2s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-form__input {
-    width: 100%;
-    height: 50px;
-    padding-left: 16px;
-    margin-bottom: 20px;
-  
-    background-color: transparent;
-    color: $primary-white-color;
-    border: 1px solid $border-color-subscribe;
-    filter: drop-shadow(0px 4px 4px var(--filter-d-shadow));
-    border-radius: 4px;
-  
-    transition: border $transition-derault;
+  @extend %centeredMargin;
+  width: 100%;
+  height: 50px;
+  padding-left: 16px;
+  margin-bottom: 20px;
 
-    @media screen and (min-width: $tablet) {
-        width: 450px;
-    }
-    
-    @media screen and (min-width: $desktop) {
-        width: 358px;
-    }
+  background-color: transparent;
+  color: $primary-white-color;
+  border: 1px solid $border-color-subscribe;
+  filter: drop-shadow(0px 4px 4px var(--filter-d-shadow));
+  border-radius: 4px;
 
-    &:focus {
-        border: 1px solid $accent-color;
-        outline: none;
-    }
+  transition: border $transition-derault;
 
-    &::placeholder {
+  @media screen and (max-width: 1199px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    width: 358px;
+  }
+
+  &:focus {
+    border: 1px solid $accent-color;
+    outline: none;
+  }
+
+  &::placeholder {
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     letter-spacing: 0.03em;
-    
+
     pointer-events: none;
-    
+
     color: $footer-address-color;
-    }
+  }
 }
 
 .button-subscribe {
@@ -76,22 +81,22 @@
   color: $primary-white-color;
   fill: $primary-white-color;
 
-  transition: background-color $transition-derault,
-    color $transition-derault, fill $transition-derault;
+  transition: background-color $transition-derault, color $transition-derault,
+    fill $transition-derault;
 
-    @media screen and (min-width: $tablet) and (max-width: 1199px) {
-        margin-left: auto;
-        margin-right: auto;
-      }
+  @media screen and (max-width: 1199px) {
+    margin-left: auto;
+    margin-right: auto;
+  }
 
-    &:hover,
-    &:focus {
+  &:hover,
+  &:focus {
     background-color: $hover-button-color;
-    }
+  }
 
-    &:active {
+  &:active {
     background-color: transparent;
     color: $accent-color;
     fill: $accent-color;
-    }
+  }
 }
