--- a/sass/components/page-header/_menu.scss
+++ b/sass/components/page-header/_menu.scss
@@ -5,13 +5,17 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    
+    width: 480px;
+    height: 100vh;
+
     z-index: 1;
 
     display: none;
 
     &.is-open {
+      position: fixed;
+      overflow-y: scroll;
+   
       display: flex;
     flex-direction: column;
     }
