--- a/sass/components/page-header/_site-nav.scss
+++ b/sass/components/page-header/_site-nav.scss
@@ -22,6 +22,8 @@
 
 .contacts {
   @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column-reverse;
     margin-top: 40%;
   }
 
@@ -35,6 +37,24 @@
     display: flex;
     flex-direction: row;
     gap: 40px;
+  }
+}
+
+.contacts__number {
+  @media screen and (max-width: 767px) {
+    font-size: 34px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.68px;
+  }
+}
+
+.contacts__mail {
+  @media screen and (max-width: 767px) {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 0.48px;
   }
 }
 
@@ -78,7 +98,6 @@
   color: $primary-text-color;
   align-items: center;
   line-height: normal;
-
 
   @media screen and (max-width: 767px) {
     padding-top: 16px;
