--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ p {
   padding: 0;
 }
 
-body.modal-open, body.menu-open {
+body.modal-open, .menu-container.is-open {
   overflow: hidden;
 }
 
@@ -212,7 +212,7 @@ body.modal-open, body.menu-open {
     padding: 0;
     border: none;
     background-color: transparent;
-    z-index: 2;
+    z-index: 1;
   }
 }
 @media screen and (min-width: 768px) {
@@ -223,6 +223,7 @@ body.modal-open, body.menu-open {
 
 .menu-button.is-open {
   position: fixed;
+  z-index: 2;
 }
 
 .menu-button__icon {
@@ -405,8 +406,8 @@ body.modal-open, body.menu-open {
     position: absolute;
     top: 0;
     left: 0;
-    width: 480px;
-    height: 100vh;
+    width: 100%;
+    height: 120vh;
     z-index: 1;
     display: none;
   }
@@ -441,6 +442,7 @@ body.modal-open, body.menu-open {
     margin-left: 40px;
     margin-bottom: 48px;
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
   }
 }
@@ -953,11 +955,11 @@ body.modal-open, body.menu-open {
   margin-bottom: 20px;
   color: #ffffff;
   letter-spacing: 0.42px;
-  translate: border 2s cubic-bezier(0.4, 0, 0.2, 1);
+  translate: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .subscribe-form__input {
-  width: 100%;
+  display: block;
   height: 50px;
   padding-left: 16px;
   margin-bottom: 20px;
@@ -968,7 +970,12 @@ body.modal-open, body.menu-open {
   border-radius: 4px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (max-width: 480px) {
+  .subscribe-form__input {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 481px) {
   .subscribe-form__input {
     width: 450px;
   }
@@ -1156,6 +1163,7 @@ body.modal-open, body.menu-open {
   background-color: rgba(0, 0, 0, 0.1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow-y: scroll;
+  z-index: 3;
   padding: 95px 15px;
 }
 .backdrop.is-hidden {
@@ -1327,7 +1335,7 @@ textarea::placeholder {
 
 .icon-checked {
   display: inline-block;
-  width: 15px;
+  min-width: 15px;
   height: 15px;
   border: 2px solid #212121;
   border-radius: 2px;
@@ -1340,11 +1348,11 @@ textarea::placeholder {
 }
 
 .form-field.checkbox {
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: start;
   align-items: center;
+  flex-wrap: nowrap;
   gap: 8px;
   margin-left: 4px;
   margin-top: 20px;
@@ -1353,6 +1361,12 @@ textarea::placeholder {
   font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.36px;
+}
+@media screen and (max-width: 768px) {
+  .form-field.checkbox {
+    display: inline-flex;
+    margin-left: 4px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .form-field.checkbox {
