--- a/css/main.css
+++ b/css/main.css
@@ -1107,7 +1107,8 @@ body.is-open {
 }
 
 .portfolio-list__link {
-  display: block;
+  display: flex;
+  flex-direction: column;
   text-decoration: none;
   transition: box-shadow 250ms 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1154,6 +1155,9 @@ body.is-open {
 }
 
 .caption {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   padding: 20px 24px;
   background-color: #ffffff;
   border-left: 1px solid #ececec;
@@ -1198,6 +1202,10 @@ body.is-open {
 
 .modal {
   position: relative;
+  top: 50%;
+  left: 50%;
+  max-width: 450px;
+  transform: translate(-50%, -50%);
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -1234,20 +1242,23 @@ body.is-open {
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50px;
+  cursor: pointer;
 }
+
 .icon-close {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
 }
-.close:hover .icon-close {
+.close:hover .icon-close, .close:focus .icon-close, .close:active .icon-close {
   fill: #2196f3;
 }
 
 .submit-form {
+  display: flex;
+  flex-direction: column;
   padding: 40px;
   margin: 0;
 }
@@ -1377,11 +1388,11 @@ textarea::placeholder {
 }
 
 .form-field.checkbox {
-  display: inline-flex;
+  display: flex;
   margin-left: 4px;
   flex-direction: row;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   margin-top: 20px;
   margin-bottom: 30px;
   font-weight: 400;
