--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
 
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -54,7 +54,7 @@ body.is-open {
   justify-content: center;
 }
 
-.button-submit, .subscribe-form__input, .button__primary, .hero__title, .hero {
+.button-submit, .subscribe-form__input, .team-list__item, .button__primary, .hero__title, .hero {
   margin-left: auto;
   margin-right: auto;
 }
@@ -228,7 +228,7 @@ body.is-open {
 }
 
 .menu-button.is-open {
-  position: absolute;
+  position: fixed;
   z-index: 2;
 }
 
@@ -287,7 +287,7 @@ body.is-open {
   .contacts {
     display: flex;
     flex-direction: column-reverse;
-    margin-top: 40%;
+    margin-top: 30%;
   }
 }
 @media screen and (min-width: 768px) {
@@ -418,6 +418,7 @@ body.is-open {
     display: none;
   }
   .menu-container.is-open {
+    max-width: 480px;
     position: fixed;
     overflow-y: scroll;
     display: flex;
@@ -444,7 +445,7 @@ body.is-open {
     list-style: none;
     margin: 0;
     padding: 0;
-    margin-top: 64px;
+    margin-top: 15%;
     margin-left: 40px;
     margin-bottom: 48px;
     display: flex;
@@ -718,6 +719,9 @@ body.is-open {
   letter-spacing: 0.03em;
 }
 
+.team-list__item {
+  max-width: 450px;
+}
 @media screen and (min-width: 768px) {
   .team-list__item {
     flex-basis: calc((100% - 60px) / 2);
