--- a/sass/components/main/team/_team.scss
+++ b/sass/components/main/team/_team.scss
@@ -38,6 +38,9 @@
 }
 
 .team-list__item {
+  max-width: 450px;
+@extend %centeredMargin;
+
   @media screen and (min-width: $tablet) {
     flex-basis: calc((100% - 2 * 30px) / 2);
   }
