--- a/sass/components/page-header/_menu.scss
+++ b/sass/components/page-header/_menu.scss
@@ -13,6 +13,7 @@
     display: none;
 
     &.is-open {
+      max-width: 480px;
       position: fixed;
       overflow-y: scroll;
    
@@ -40,7 +41,7 @@
     margin: 0;
     padding: 0;
 
-    margin-top: 64px;
+    margin-top: 15%;
     margin-left: 40px;
     margin-bottom: 48px;
 
