--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,7 @@ p {
   padding: 0;
 }
 
-body.modal-open {
-  overflow: hidden;
-}
-
-body.is-open {
+body.modal-open, body.mobile-open {
   overflow: hidden;
 }
 
@@ -227,7 +223,6 @@ body.is-open {
     display: none;
   }
 }
-
 .menu-button.is-open {
   position: absolute;
   z-index: 2;
@@ -422,9 +417,6 @@ body.is-open {
     display: none;
   }
   .menu-container.is-open {
-    max-width: 480px;
-    position: fixed;
-    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -439,8 +431,6 @@ body.is-open {
 }
 @media screen and (min-width: 1200px) {
   .menu-container {
-    display: flex;
-    align-items: center;
     gap: 305px;
   }
 }
@@ -1392,23 +1382,16 @@ textarea::placeholder {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-image 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.checkbox-input__txt {
-  padding-right: 8px;
-}
-
-.policy-link {
-  margin-left: 8px;
-  color: #2196f3;
-}
-
 .form-field.checkbox {
-  display: flex;
+  display: inline-flex;
+  max-width: 450px;
   margin-left: 4px;
   flex-direction: row;
   align-items: center;
   flex-wrap: nowrap;
   margin-top: 20px;
   margin-bottom: 30px;
+  gap: 8px;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.71;
@@ -1425,6 +1408,15 @@ textarea::placeholder {
     line-height: 1.71;
     letter-spacing: 0.03em;
   }
+}
+
+.checkbox-input__txt {
+  display: inline-block;
+}
+
+.policy-link {
+  flex-wrap: wrap;
+  color: #2196f3;
 }
 
 .button-submit {
